--- a/css/default.css
+++ b/css/default.css
@@ -16,14 +16,11 @@ You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
 
-/* @import url('https://fonts.googleapis.com/css?family=Droid Sans'); */
-/* @import url('https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@300;400;700;900&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 
 :root {
-    --serif-font: "Frank Ruhl Libre", "Koh Santepheap", serif;
+    --serif-font: "Frank Ruhl Libre", serif;
     --bg-light: white;
     --bg-dark: #111;
     --fg-light: black;
@@ -94,7 +91,7 @@ body {
     background-color: var(--bg-border-color); 
     box-sizing: border-box;
     margin: 0;
-    font-family: var(--serif-font), serif;
+    font-family: var(--serif-font);
     font-weight: 300;
     font-style: normal;
 }
@@ -228,8 +225,6 @@ main {
 
 .setfont {
     font-family: "JetBrains Mono", monospace;
-    /* font-family: "IBM Plex Mono", monospace; */
-    /* font-size: larger; */
     font-size: 90%;
     font-weight: 200;
 }
