Fix span formatting

--- a/css/default.css
+++ b/css/default.css
@@ -392,10 +392,10 @@ main {
                 &:last-child {
                     line-height: 200%;
                 }
-                /* span {
+                span {
                     text-wrap: nowrap;
                     margin-right: 10px;
-                } */
+                }
             }
         }
     }
