Adjustable font on portrair

--- a/css/default.css
+++ b/css/default.css
@@ -109,7 +109,7 @@ body {
     body {
         overflow: visible; 
         height: auto;
-        font-size: 16pt;
+        font-size: 3.8vw;
     }
 }
 
