--- a/css/default.css
+++ b/css/default.css
@@ -429,7 +429,7 @@ a, span.same-set {
     padding: 1px 1px;
     text-wrap: nowrap;
     user-select: none;
-    &:not(.same-set) { color: var(--hyperlink-fg-color); }
+    &:not(.same-set):not(.close-button) { color: var(--hyperlink-fg-color); }
     &.same-set { color: var(--fg-same-set); }
     &:hover {
         background-color: var(--hyperlink-hover-bg-color);
