Add user-select: none to dialogs

--- a/css/default.css
+++ b/css/default.css
@@ -444,6 +444,10 @@ dialog.popup-container[open] {
     }
 }
 
+dialog {
+    user-select: none;
+}
+
 table {
     table-layout: fixed;
     width: 100%;
