--- a/css/clockface.css
+++ b/css/clockface.css
@@ -1,14 +1,19 @@
 
-#visualization-area svg {
-    box-sizing: border-box; 
-    object-fit: contain;
-    width: 100%; 
-    height: 100%; 
+#visualization-area {
+    svg {
+        box-sizing: border-box; 
+        object-fit: contain;
+        width: 100%; 
+        height: 100%;
+    }
+}
+
+#visualization-svg {
     g.pc {
         cursor: pointer;
         transform-origin: center;
         transform-box: border-box;
-    text {
+        text {
             font-family: serif;
             font-size: 2.5em;
             text-anchor: middle;
